--- a/index.html
+++ b/index.html
@@ -68,8 +68,14 @@
                         <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
+                    </div> 
+                <div class="row mt-4 justify-content-md-center">
+                <div class="col-md-4">
+                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                            loading="lazy">
+                    </div>
                 </div>
-            </div>
+            </div> 
         </section>
 
         <section id="contato">
