--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
                     </div> 
                 <div class="row mt-4 justify-content-md-center">
                 <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5"
+                            loading="lazy">
+                    </div>
+                   <div class="col-md-4">
+                        <img src="img/img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
