--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-        <section id="galeria">
+         <section id="galeria" tabindex="0" arial-label="Seção de galeria de imagens">
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
